# GiftGenie

./: .gitignore  README.md  amazon.py  apify-amazon.py  function_calling.py  function_calling_base.py  gift_suggestion_workflow.py  main.py  pyproject.toml  searchx.py  streamlit_app_2.py  trivial_workflow.html  workflow_0.py  workflow_1.py  workflow_2.py
logs/: 2024-10-13-01-29.txt  2024-10-13-01-31.txt  2024-10-13-01-33.txt  2024-10-13-01-40.txt  2024-10-13-01-41.txt  2024-10-13-01-43.txt  2024-10-13-01-53.txt  2024-10-13-01-58.txt  2024-10-13-09-25.txt  2024-10-13-09-56.txt  2024-10-13-10-04.txt  2024-10-13-10-07.txt  2024-10-13-10-09.txt  2024-10-13-10-16.txt  2024-10-13-10-21.txt  2024-10-13-10-23.txt  2024-10-13-10-25.txt  2024-10-13-11-40.txt  2024-10-13-11-44.txt  2024-10-13-11-51.txt  2024-10-13-11-59.txt  2024-10-13-12-13.txt  2024-10-13-12-16.txt  2024-10-13-12-25.txt  2024-10-13-12-32.txt  2024-10-13-12-39.txt  2024-10-13-14-29.txt  2024-10-13-14-40.txt  2024-10-13-15-04.txt  2024-10-13-15-44.txt  2024-10-13-15-45.txt  2024-10-13-15-56.txt  2024-10-13-15-58.txt  2024-10-13-16-15.txt  2024-10-13-16-17.txt  2024-10-13-16-21.txt  2024-10-13-16-25.txt  2024-10-13-16-32.txt  2024-10-13-16-39.txt
